# rakuda2_example

./: CMakeLists.txt  README.md  package.xml
launch/: bag2image.launch  rakuda2_master.launch  rakuda2_slave.launch  topic2bag.launch
scripts/: rakuda2_example.py
