<?xml version="1.0"?>
<package format="2">
  <name>rakuda2_example</name>
  <version>0.0.0</version>
  <description>The Rakuda-2-example package</description>
  <maintainer email="kitajima@todo.todo">kitajima</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
</package>
